[project]
description = " A Python package manager agnostic plugin integrating a transparent Conan and CMake workflow."
name = "cppython"

license-expression = "MIT"

authors = [
  {name = "Synodic Software", email = "contact@synodic.software"},
]
readme = "README.md"

dynamic = ["version"]

requires-python = ">=3.10"

dependencies = [
  "click>=8.1.3",
  "tomlkit>=0.10.2",
  "cppython-core>=0.3.3.dev0",
  "pydantic>=1.9.0",
]

[project.license-files]
paths = ["LICENSE.md"]

[project.urls]
homepage = "https://github.com/Synodic-Software/CPPython"
repository = "https://github.com/Synodic-Software/CPPython"

[tool.pdm]
version = {use_scm = true}

[tool.pdm.dev-dependencies]
lint = [
  "black>=22.3.0",
  "pylint>=2.13.8",
  "isort>=5.10.1",
]
test = [
  "pytest>=7.1.2",
  "pytest-cov>=3.0.0",
  "pytest-mock>=3.7.0",
  "pytest-cppython>=0.1.7.dev0",
]

[project.scripts]
cppython = "cppython.console.interface:cli"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326, logging-fstring-interpolation"
extension-pkg-whitelist = "pydantic"

[tool.pylint.format]
max-line-length = "120"

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]
