[project]
description = "A Python management solution for C++ dependencies"
name = "cppython"

license = "MIT"

authors = [
  {name = "Synodic Software", email = "contact@synodic.software"},
]
readme = "README.md"

dynamic = ["version"]

requires-python = ">=3.11"

dependencies = [
  "click>=8.1.3",
  "tomlkit>=0.11.4",
  "cppython-core>=0.4.1.dev19",
  "pydantic>=1.9.2",
  "dulwich>=0.20.45",
  "packaging>=21.3",
]

[project.license-files]
paths = ["LICENSE.md"]

[project.urls]
homepage = "https://github.com/Synodic-Software/CPPython"
repository = "https://github.com/Synodic-Software/CPPython"

[tool.pdm]
version = {use_scm = true}

[tool.pdm.dev-dependencies]
lint = [
  "black>=22.6.0",
  "pylint>=2.14.5",
  "isort>=5.10.1",
  "mypy>=0.982",
]
test = [
  "pytest>=7.1.2",
  "pytest-cov>=3.0.0",
  "pytest-mock>=3.8.2",
  "pytest-cppython>=0.2.0.dev0",
]

# Plugin registration
[project.entry-points."cppython.scm"]
cmake = "cppython.plugins.git:GitSCM"

[project.scripts]
cppython = "cppython.console.interface:cli"

[tool.pdm.scripts]
analyze = {shell = "pylint --verbose cppython tests"}
format = {shell = "black --check --verbose ."}
lint = {composite = ["analyze", "format", "sort-imports", "type-check"]}
sort-imports = {shell = "isort --check-only --diff --verbose ."}
test = {shell = "pytest --cov=cppython --verbose tests"}
type-check = {shell = "mypy ."}

[tool.pytest.ini_options]
log_cli = true
testpaths = [
  "tests",
]

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
exclude = "__pypackages__"
plugins = ["pydantic.mypy"]
show_error_codes = true
strict = true

[tool.pylint.MAIN]
load-plugins = [
  "pylint.extensions.code_style",
  "pylint.extensions.typing",
  "pylint.extensions.docstyle",
  "pylint.extensions.docparams",
  "pylint.extensions.private_import",
  "pylint.extensions.bad_builtin",
]

[tool.pylint.messages_control]
extension-pkg-whitelist = "pydantic"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.parameter_documentation]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
default-docstring-type = "google"

[tool.coverage.report]
skip_empty = true

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]
