[tool.poetry]
name = "synodic-poetic-test"
version = "0.0.0"
description = "A test package for Conan for Poetry."

license = "MIT"

authors = [
    "Synodic Software"
]

readme = "README.md"

repository = "https://github.com"
homepage = "https://github.com"


[tool.poetry.dependencies]
python = "^3.9.1"
conan = "^1.36.0"

[tool.conan]
install-path = "test_install"
remotes = []

[tool.conan.dependencies]
poco = "1.10.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry>=1.1.6"]

